--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
 	<title> ACWW Web SaveEditor </title>
 	<link rel="stylesheet" href="css/main.css">
 
-	<script src="js/core/item.js"></script>
-	<script src="js/core/pattern.js"></script>
-	<script src="js/core/player.js"></script>
-	<script src="js/core/sav.js"></script>
-	<script src="js/core/villager.js"></script>
-	<script src="js/main.js"></script>
-	<script src="js/utils/checksum.js"></script>
+	<script type="module" src="js/core/item.js"></script>
+	<script type="module" src="js/core/letter.js"></script>
+	<script type="module" src="js/core/pattern.js"></script>
+	<script type="module" src="js/core/player.js"></script>
+	<script type="module" src="js/core/sav.js"></script>
+	<script type="module" src="js/core/villager.js"></script>
+	<script type="module" src="js/main.js"></script>
+	<script type="module" src="js/utils/checksum.js"></script>
 	<script src="js/utils/encoding.js"></script>
-	<script src="js/utils/savutils.js"></script>
+	<script type="module" src="js/utils/savutils.js"></script>
 </head>
 
 <body>
 	<main>
 		<h3>Select your Savefile</h3>
-		<input class="form-file-input" id="savSelector" type="file" accept=".sav" onchange="loadSav(this.files[0])">
+		<input class="form-file-input" id="savSelector" type="file" accept=".sav">
 		<canvas id="TestCanvas"></canvas>
 	</main>
 </body>
