--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
 	<title> ACWW Web SaveEditor </title>
 	<link rel="stylesheet" href="assets/css/main.css">
 
+	<script type="module" src="assets/js/core/house.js"></script>
 	<script type="module" src="assets/js/core/item.js"></script>
 	<script type="module" src="assets/js/core/letter.js"></script>
 	<script type="module" src="assets/js/core/pattern.js"></script>
 	<script type="module" src="assets/js/core/player.js"></script>
+	<script type="module" src="assets/js/core/room.js"></script>
 	<script type="module" src="assets/js/core/sav.js"></script>
+	<script type="module" src="assets/js/core/shop.js"></script>
 	<script type="module" src="assets/js/core/town.js"></script>
 	<script type="module" src="assets/js/core/villager.js"></script>
+
 	<script type="module" src ="assets/js/editor/patternEditor.js"></script>
 	<script type="module" src ="assets/js/editor/playerEditor.js"></script>
+	<script type="module" src="assets/js/editor/shopEditor.js"></script>
 	<script type="module" src="assets/js/editor/villagerEditor.js"></script>
+
 	<script type="module" src="assets/js/main.js"></script>
 	<script type="module" src="assets/js/utils/checksum.js"></script>
 	<script type="module" src="assets/js/utils/encoding.js"></script>
@@ -31,13 +37,14 @@
 			<div id="SavLoader">
 				<!-- Initial Box including a few information. -->
 				<div id="informationBox" class="informationBox">
-					<p>Welcome to ACWW Web Save Editor! Here you can read a few information about it.</p>
-					<p>ACWW Web Save Editor is a work in progress Save Editor for Animal Crossing: Wild World made in Javascript + HTML.</p>
-					<p>It is always recommended to have a backup of your savefile! Just in case something bad might happen!</p>
-					<p>If you are looking for an on console Save Editor, we suggest you'd look for <a href="https://github.com/Universal-Team/WildEdit".>WildEdit</a> on a DS(i), or <a href="https://github.com/Universal-Team/LeafEdit".>LeafEdit</a> on a 3DS.</p>
-					<p>For a list of features, please take a look <a href="https://github.com/Universal-Team/ACWW-Web-SaveEditor/blob/main/FeaturesList.md">here.</a></p>
-					<p>You can find the source code of ACWW Web Save Editor <a href="https://github.com/Universal-Team/ACWW-Web-SaveEditor">here.</a></p>
-					<p>Copyright (C) 2020 by Universal-Team</p>
+					<h3>ACWW Web Save Editor is a work in progress Save Editor for Animal Crossing: Wild World made in JavaScript, HTML and CSS.</h3>
+					It is always recommended to have a backup of your savefile! Just in case something bad might happen!<br><br>
+					If you are looking for an on console Save Editor, we suggest you'd look for <a href="https://github.com/Universal-Team/WildEdit">WildEdit</a> on a DS(i), or <a href="https://github.com/Universal-Team/LeafEdit">LeafEdit</a> on a 3DS.<br><br>
+					If you are interested into save research documentation, take a look <a href="https://github.com/SuperSaiyajinStackZ/ACWW_Research/wiki">here.</a><br>
+					For a list of features, take a look <a href="https://github.com/Universal-Team/ACWW-Web-SaveEditor/blob/main/FeaturesList.md">here.</a><br>
+					You can find the source code of ACWW Web Save Editor <a href="https://github.com/Universal-Team/ACWW-Web-SaveEditor">here.</a><br><br>
+					If you need help, feel free to join our discord server <a href="https://universal-team.net/discord">here.</a><br>
+					Copyright (C) 2020 by Universal-Team<br><br>
 				</div>
 
 				<button id="savSelector">Select your Savefile</button>
@@ -45,65 +52,48 @@
 
 			<!-- Menu Tabs, including Item list. -->
 			<div id="Menu-Tabs" class="d-none">
-				<br></br>
-				<label for="ItemList">Selected Temp Item:</label> <select id="ItemList"></select>
-				<br></br>
+				<br><label for="ItemList">Selected Temp Item:</label> <select id="ItemList"></select><br><br>
+
 				<button id="Player-Tab" class="selectedTab">Players</button>
 				<button id="Villager-Tab" class="btnTabs">Villagers</button>
 				<button id="Town-Tab" class="btnTabs">Town</button>
+				<button id="Shop-Tab" class="btnTabs">Shop</button>
+				<button id="House-Tab" class="btnTabs">House</button>
 				<button id="SaveChanges" class="btnTabs">Save Changes</button>
 			</div>
 
 			<!-- Player Editor. -->
-			<div id="PlayerEditor" class="d-none">
-				<br></br>
+			<div id="PlayerEditor" class="d-none"><br>
 				<button id="Player 0">Player 1</button>
 				<button id="Player 1">Player 2</button>
 				<button id="Player 2">Player 3</button>
 				<button id="Player 3">Player 4</button>
 
+				<!-- Player Info. -->
 				<div id="PlayerInfo" class="d-none">
 					<h3> Player Info </h3>
-					<table>
-						<tr>
-							<td>Player Name: <input type="text" id="PlayerName"></td>
-						</tr>
-						<tr>
-							<td>Wallet Amount: <input type="number" min="0" max="99999" id="WalletAmount">
-								<button id="MinWallet">min</button> <button id="MaxWallet">max</button> <button id="RandomWallet">randomize</button>
-							</td>
-						</tr>
-						<tr>
-							<td>Bank Amount: <input type="number" min="0" max="999999999" id="BankAmount">
-								<button id="MinBank">min</button> <button id="MaxBank">max</button> <button id="RandomBank">randomize</button>
-							</td>
-						</tr>
-						<tr>
-							<td><label for="Gender">Gender:</label> <select id="Gender"></select>
-								<button id="RandomGender">randomize</button>
-							</td>
-						</tr>
-						<tr>
-							<td><label for="Facetype">Facetype:</label> <select id="Facetype"></select>
-								<button id="RandomFacetype">randomize</button> <img id="FacetypePrev">
-							</td>
-						</tr>
-						<tr>
-							<td><label for="Hairstyle">Hairstyle:</label> <select id="Hairstyle"></select>
-								<button id="RandomHairstyle">randomize</button>
-							</td>
-						</tr>
-						<tr>
-							<td><label for="Haircolor">Haircolor:</label> <select id="Haircolor"></select>
-								<button id="RandomHaircolor">randomize</button>
-							</td>
-						</tr>
-						<tr>
-							<td><label for="Tan">Tan:</label> <select id= "Tan"></select>
-								<button id="RandomTan">randomize</button>
-							</td>
-						</tr>
-					</table>
+					Player Name: <input type="text" id="PlayerName"><br>
+
+					Wallet Amount: <input type="number" min="0" max="99999" id="WalletAmount">
+					<button id="MinWallet">min</button> <button id="MaxWallet">max</button> <button id="RandomWallet">randomize</button><br>
+
+					Bank Amount: <input type="number" min="0" max="999999999" id="BankAmount">
+					<button id="MinBank">min</button> <button id="MaxBank">max</button> <button id="RandomBank">randomize</button><br>
+
+					<label for="Gender">Gender:</label> <select id="Gender"></select>
+					<button id="RandomGender">randomize</button><br>
+
+					<label for="Facetype">Facetype:</label> <select id="Facetype"></select>
+					<button id="RandomFacetype">randomize</button> <img id="FacetypePrev"><br>
+
+					<label for="Hairstyle">Hairstyle:</label> <select id="Hairstyle"></select>
+					<button id="RandomHairstyle">randomize</button><br>
+
+					<label for="Haircolor">Haircolor:</label> <select id="Haircolor"></select>
+					<button id="RandomHaircolor">randomize</button><br>
+
+					<label for="Tan">Tan:</label> <select id= "Tan"></select>
+					<button id="RandomTan">randomize</button><br>
 
 					<!-- Player Pattern. -->
 					<h3>Player Pattern</h3>
@@ -123,8 +113,7 @@
 			</div>
 
 			<!-- Villager Editor. -->
-			<div id="VillagerEditor" class="d-none">
-				<br></br>
+			<div id="VillagerEditor" class="d-none"><br>
 				<button id="Villager 0">Villager 1</button>
 				<button id="Villager 1">Villager 2</button>
 				<button id="Villager 2">Villager 3</button>
@@ -134,77 +123,84 @@
 				<button id="Villager 6">Villager 7</button>
 				<button id="Villager 7">Villager 8</button>
 
+				<!-- Villager Info. -->
 				<div id="VillagerInfo" class="d-none">
 					<h3> Villager Info </h3>
-					<table>
-						<tr>
-							<td><label for="Villager Species">Species:</label> <select id="Villager Species"></select>
-								<button id="RandomVillager">randomize</button>
-							</td>
-						</tr>
-						<tr>
-							<td><label for="Villager Personality">Personality:</label> <select id="Villager Personality"></select>
-								<button id="RandomPersonality">randomize</button>
-							</td>
-						</tr>
-					</table>
+					<label for="Villager Species">Species:</label> <select id="Villager Species"></select>
+					<button id="RandomVillager">randomize</button><br>
+
+					<td><label for="Villager Personality">Personality:</label> <select id="Villager Personality"></select>
+					<button id="RandomPersonality">randomize</button><br>
+
+					<h3>Villager Pattern</h3>
+					<div id="VillagerPattern"></div>
+
+					<h3>Villager Furnitures</h3>
+					<div id="VillagerFurnitures"></div>
 				</div>
 			</div>
 
 			<!-- Town Editor. -->
 			<div id="TownEditor" class="d-none">
 				<h3> Town Info </h3>
-				<table>
-					<tr>
-						<td><label for="Town-Editor-Name">Town Name: </label><input type="text" id="Town-Editor-Name"></td>
-					</tr>
-					<tr>
-						<td>Town ID: <input type="number" min="0" max="65535" id="Town-Editor-ID"></td>
-					</tr>
-					<tr>
-						<td>Turnip Price: <input type="number" min="0" max="255" id="Town-Editor-Turnip-Price"></td>
-					</tr>
-				</table>
+				<label for="Town-Editor-Name">Town Name: </label><input type="text" id="Town-Editor-Name"><br>
+				Town ID: <input type="number" min="0" max="65535" id="Town-Editor-ID"><br>
+				Turnip Price: <input type="number" min="0" max="255" id="Town-Editor-Turnip-Price"><br>
 
 				<h1>Town Acres</h1>
 				<div id="acresGrid"></div>
+
+				<h3>Town Flag Pattern</h3>
+				<div id="TownFlagPattern"></div>
+			</div>
+
+			<!-- Shop Editor. -->
+			<div id="ShopEditor" class="d-none">
+				<h3>Able Sister Pattern</h3>
+				<div id="AbleSisterPattern"></div>
+			</div>
+
+			<!-- House Editor. -->
+			<div id="HouseEditor" class="d-none"><br>
+				<button id="Room 0">Entry Room</button>
+				<button id="Room 1">Back Wing</button>
+				<button id="Room 2">Right Wing</button>
+				<button id="Room 3">Left Wing</button>
+				<button id="Room 4">Second Floor</button>
+
+				<br><br><label for="HouseSize">House Size: </label><select id="HouseSize"></select><br>
+				<label for="HouseDebt">Debts: </label><input type="number" min="0" id="HouseDebt"><br>
+				<button id="UnlockHouseSongs">Unlock Songs</button>
+
+				<!-- Room Information part. -->
+				<div id="RoomInfo">
+					<h3>Item Layer 1</h3><div id="Layer1RoomGrid" class="RoomItemGrid"></div>
+					<h3>Item Layer 2</h3><div id="Layer2RoomGrid" class="RoomItemGrid"></div>
+					<h3>Room Wallpaper, Carpet and Song</h3><div id="RoomItems"></div> <!-- No idea what to call it otherwise. -->
+				</div>
 			</div>
 
 			<!-- Pattern Editor. -->
 			<div id="PatternEditor" class="d-none">
-				<tr>
-					<td><button id="Pattern-Editor-Return">Return to previous menu</button></td>
-				</tr>
+				<button id="Pattern-Editor-Return">Return to previous menu</button><br>
 
 				<h3> Pattern Editor </h3>
-				<table>
-					<tr>
-						<td>Pattern Name: <input type="text" id="Pattern-Editor-Name"></td>
-					</tr>
-					<tr>
-						<td>Creator Name: <input type="text" id="Pattern-Editor-Creator-Name"></td>
-					</tr>
-					<tr>
-						<td>Creator ID: <input type="number" min="0" max="65535" id="Pattern-Editor-Creator-ID"></td>
-					</tr>
-					<tr>
-						<td><label for="Pattern-Editor-Creator-Gender">Creator Gender:</label> <select id="Pattern-Editor-Creator-Gender"></select></td>
-					</tr>
-					<tr>
-						<td>Origin Town Name: <input type="text" id="Pattern-Editor-Town-Name"></td>
-					</tr>
-					<tr>
-						<td>Origin Town ID: <input type="number" min="0" max="65535" id="Pattern-Editor-Town-ID"></td>
-					</tr>
-					<tr>
-						<td><button id="InjectPattern">Inject Pattern</button> <button id="DumpPattern">Dump Pattern</button></td>
-					</tr>
-					<tr>
-						<td><label for="Pattern-Editor-Player-Selector">Set Pattern Info</label> <select id="Pattern-Editor-Player-Selector"></select>
-							<button id="Pattern-Editor-Own-Apply">Apply</button>
-						</td>
-					</tr>
-				</table>
+				Pattern Name: <input type="text" id="Pattern-Editor-Name"><br>
+
+				Creator Name: <input type="text" id="Pattern-Editor-Creator-Name"><br>
+
+				Creator ID: <input type="number" min="0" max="65535" id="Pattern-Editor-Creator-ID"><br>
+
+				<label for="Pattern-Editor-Creator-Gender">Creator Gender:</label> <select id="Pattern-Editor-Creator-Gender"></select><br>
+
+				Origin Town Name: <input type="text" id="Pattern-Editor-Town-Name"><br>
+
+				Origin Town ID: <input type="number" min="0" max="65535" id="Pattern-Editor-Town-ID"><br>
+
+				<button id="InjectPattern">Inject Pattern</button><button id="DumpPattern">Dump Pattern</button><br>
+
+				<label for="Pattern-Editor-Player-Selector">Set Pattern Info</label> <select id="Pattern-Editor-Player-Selector"></select>
+				<button id="Pattern-Editor-Own-Apply">Apply</button><br>
 			</div>
 		</div>
 
@@ -214,6 +210,7 @@
 			<h3>Select an Acre.</h3>
 			<div id="AcreSelection"></div>
 		</div>
+
 	<!-- End. -->
 	</main>
 </body>
